[gd_scene load_steps=11 format=2]

[ext_resource path="res://a29669133d9ee191299799ef3fbf521f.jpg" type="Texture" id=1]
[ext_resource path="res://yt5s.io - Death Note Ost 1 - 22 Teloelogy of Death (128 kbps).mp3" type="AudioStream" id=2]
[ext_resource path="res://barraspritbackse.png" type="Texture" id=3]
[ext_resource path="res://barraspspriprogreess.png" type="Texture" id=4]
[ext_resource path="res://TextureProgress.gd" type="Script" id=5]
[ext_resource path="res://numb.gd" type="Script" id=6]
[ext_resource path="res://Cola por gesto.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cola por mão na mesa.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cola por som2.tscn" type="PackedScene" id=9]
[ext_resource path="res://colaNitida.tscn" type="PackedScene" id=10]

[node name="Sala" type="Node2D"]

[node name="BackgroundSala" type="Sprite" parent="."]
position = Vector2( 511.75, 298.25 )
scale = Vector2( 1.1028, 1.21283 )
texture = ExtResource( 1 )

[node name="BarraProgrsso" type="TextureProgress" parent="."]
margin_left = 404.0
margin_top = 20.0
margin_right = 694.0
margin_bottom = 84.0
max_value = 180.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
script = ExtResource( 5 )

[node name="Button" type="Button" parent="BarraProgrsso"]
anchor_left = -0.938
anchor_top = 5.197
anchor_right = -0.938
anchor_bottom = 5.197
margin_left = 212.02
margin_top = 159.392
margin_right = 299.02
margin_bottom = 229.392
text = "A"

[node name="Button2" type="Button" parent="BarraProgrsso"]
anchor_left = -2.107
anchor_top = 5.552
anchor_right = -2.107
anchor_bottom = 5.552
margin_left = 663.03
margin_top = 136.672
margin_right = 750.03
margin_bottom = 206.672
text = "B"

[node name="Button3" type="Button" parent="BarraProgrsso"]
anchor_left = -2.107
anchor_top = 5.552
anchor_right = -2.107
anchor_bottom = 5.552
margin_left = 775.03
margin_top = 136.672
margin_right = 862.03
margin_bottom = 206.672
text = "C"

[node name="Button4" type="Button" parent="BarraProgrsso"]
anchor_left = -2.107
anchor_top = 5.552
anchor_right = -2.107
anchor_bottom = 5.552
margin_left = 887.03
margin_top = 136.672
margin_right = 974.03
margin_bottom = 206.672
text = "D"

[node name="numb" type="Label" parent="."]
margin_left = 566.0
margin_top = 105.0
margin_right = 606.0
margin_bottom = 119.0
text = "30"
script = ExtResource( 6 )

[node name="timer" type="Timer" parent="numb"]
autostart = true

[node name="tenso" type="AudioStreamPlayer" parent="numb"]
stream = ExtResource( 2 )
volume_db = -20.0
autoplay = true

[node name="Cola por gesto" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 67, 287 )

[node name="Cola por som2" parent="." instance=ExtResource( 9 )]

[node name="Cola por mão na mesa" parent="." instance=ExtResource( 8 )]

[node name="colaNitida" parent="." instance=ExtResource( 10 )]
position = Vector2( 333, 348 )

[connection signal="pressed" from="BarraProgrsso/Button" to="BarraProgrsso" method="_on_Button_pressed"]
[connection signal="pressed" from="BarraProgrsso/Button2" to="BarraProgrsso" method="_on_Button2_pressed"]
[connection signal="pressed" from="BarraProgrsso/Button3" to="BarraProgrsso" method="_on_Button3_pressed"]
[connection signal="pressed" from="BarraProgrsso/Button4" to="BarraProgrsso" method="_on_Button4_pressed"]
[connection signal="timeout" from="numb/timer" to="numb" method="_on_timer_timeout"]
